# ExamenTema3

./: CMakeLists.txt  README.md  Variant.cpp  ejercicio 2
Ejercicio1/: Variant.cpp  enviroment.cpp  enviroment.h  main.cpp  variant.h
Ejercicio2/: enviroment.cpp  enviroment.h  main.cpp  variant.h
Ejercicio3/: enviroment.cpp  enviroment.h  main.cpp  variant.h
Ejercicio4/: Enviroment.cpp  Enviroment.h  main.cpp  variant.h
